Fix spacing of speech bubble

--- a/src/index.scss
+++ b/src/index.scss
@@ -267,7 +267,7 @@ a {
     content: " ";
     height: 40px;
     position: absolute;
-    right: 228px;
+    right: 212px;
     width: 30px;
     bottom: 1px;
   }
